--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,3 +25,23 @@
   background-color: rgba(0, 0, 0, 0.6);
  
 }
+
+.cont-main-people{
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;  
+}
+
+.cont-title{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cont-properties{
+  display: flex;
+  gap: 40px;
+
+}
