--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -17,3 +17,10 @@ nav{
     width: 100px;
     border: 1px solid blue;
 }
+
+.cont-api-info{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 15px;
+}
